<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:background="@drawable/background_1"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="56dp"
        android:src="@drawable/icon_settings"
        android:padding="16dp"
        android:layout_marginTop="28dp"
        android:id="@+id/main_button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="56dp"/>

    <ImageView
        android:layout_width="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_charts"
        android:id="@+id/main_button_charts"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:padding="16dp"
        android:layout_height="56dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/main_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_button_charts"
        app:layout_constraintBottom_toBottomOf="@id/main_button_charts"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="Phone Down \n Enjoy Life"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/main_guideline"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/main_guideline"
        android:textStyle="bold"
        android:id="@+id/main_text"
        android:shadowRadius="2"
        android:shadowDy="1"
        android:shadowColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <com.askete.meditate.ui.views.SpinnerLayout
        android:layout_width="wrap_content"
        android:id="@+id/main_spinner"
        app:layout_constraintBottom_toTopOf="@id/main_button_proceed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/main_spinner_text"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            tools:text="10 minutes"
            android:shadowRadius="2"
            android:shadowDy="1"
            android:shadowColor="#000"
            android:textColor="@color/colorArrowList"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_spinner_text"
            android:tint="@color/colorArrowList"
            android:scaleX=".75"
            android:scaleY=".75"
            android:src="@drawable/ic_arrow_down"
            android:layout_height="wrap_content"/>
    </com.askete.meditate.ui.views.SpinnerLayout>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/main_guideline"
        app:layout_constraintGuide_percent=".5"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="200dp"
        android:text="@string/main_text_desc"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="14sp"
        android:fontFamily="sans-serif-light"
        android:shadowRadius="2"
        android:shadowDy="1"
        android:shadowColor="#000"
        android:layout_marginTop="44dp"

        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="56dp"
        android:background="@drawable/main_button"
        android:id="@+id/main_button_proceed"
        android:text="@string/let_s_go"
        android:textAllCaps="true"
        android:textColor="#333"
        android:gravity="center"
        android:textSize="12sp"
        android:fontFamily="sans-serif-medium"
        android:layout_height="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>