<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="#fdfdfd"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/preferences_toolbar"
        app:cardBackgroundColor="#fff"
        app:cardElevation="3dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="80dp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="?android:attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:text="Settings"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/preferences_header"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="#333"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_width="56dp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/preferences_back"
                    android:padding="18dp"
                    android:alpha="0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:tint="#333"
                    android:layout_height="56dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.appcompat.widget.Toolbar>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/preferences_toolbar"
        android:layout_height="1dp"
        android:background="@color/grey_10" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/preferences_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/preferences_not_disturb_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/not_disturb_activation"
            android:textColor="#222"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="true"
            android:id="@+id/preferences_not_disturb_switch"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/preferences_not_disturb_container"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/preferences_daily_reminder_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/daily_reminder"
            android:textColor="#222"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/preferences_daily_reminder_switch"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/preferences_daily_reminder_container"
        android:id="@+id/preferences_schedule_container"
        android:paddingStart="16dp"
        android:alpha=".5"
        android:paddingEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_height="60dp">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/preferences_schedule_guideline"
            app:layout_constraintGuide_percent=".5"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/preferences_schedule_guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/scheduled_time"
            android:textColor="#222"
            android:id="@+id/preferences_schedule_header"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/preferences_schedule_guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#222"
            tools:text="12:00 AM"
            android:textSize="12sp"
            android:id="@+id/preferences_schedule_time"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>